2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7105.
	* gnu/testlet/javax/swing/event/EventListenerList/remove.java: New
	test, passes with JDK 1.4.1_01 but not with Classpath.

2004-01-06  Sascha Brawer  <brawer@dandelis.ch>

	Classpath bug #7104.
	* gnu/testlet/javax/swing/event/EventListenerList/add.java: New test,
	passes with JDK 1.4.1_01 but not with Classpath.

2004-01-03  Per Bothner  <per@bothner.com>

	* gnu/testlet/java/util/Date/parse.java (parse): New testcases
	for Date.parse.

2003-12-30  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/net/URL/URLTest.java: Fixed. Now it
	passes with JDK 1.4.2.

2003-12-28  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/io/LineNumberReader/Test2.java:
	New testcases for LineNumberReader (stress tests).

2003-12-27  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/net/URLConnection/Http.java:
	New really slightly improved HTTP connection testcase. We really check
	the presence of the null header in URLConnection.

2003-12-27  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/io/CharArrayReader/OutOfBounds.java:
	New testcase to check exception thrown by CharArrayReader.read(X).

2003-12-22  Michael Koch <konqueror@gmx.de>

	* gnu/testlet/java/net/DatagramPacket/DatagramPacketOffset.java,
	gnu/testlet/java/net/DatagramPacket/DatagramPacketReceive.java,
	gnu/testlet/java/net/DatagramPacket/DatagramPacketReceive2.java:
	New files from Norbert Frese to test UDP packet sending/receiving.

2003-12-15  Guilhem Lavaux <guilem@kaffe.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.java:
	Added copyright advertisement.

2003-12-14  Guilhem Lavaux <guilem@kaffe.org>

	* gnu/testlet/java/io/ObjectInputOutput/Compat1.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.java,
	gnu/testlet/java/io/ObjectInputOutput/Compat1.serial.bin,
	gnu/testlet/java/io/ObjectInputOutput/Compat2.serial.bin:
	New tests.
